@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: Em10DetectorConstruction.cc,v 1.5 2001-07-11 09:57:23 gunter Exp $
+// $Id: Em10DetectorConstruction.cc,v 1.6 2001-11-21 11:57:13 mverderi Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -62,42 +62,40 @@
 //
 
 Em10DetectorConstruction::Em10DetectorConstruction()
-:solidWorld(NULL),logicWorld(NULL),physiWorld(NULL),
- solidAbsorber(NULL),logicAbsorber(NULL),physiAbsorber(NULL),
- solidRadiator(NULL),logicRadiator(NULL),physiRadiator(NULL),
- fSolidRadSlice(NULL),fLogicRadSlice(NULL),fPhysicRadSlice(NULL),
- AbsorberMaterial(NULL),WorldMaterial(NULL),fRadiatorMat(NULL),
- magField(NULL),calorimeterSD(NULL),worldchanged(false),fXTRModel(NULL)
+  :worldchanged(false), AbsorberMaterial(0),  fGapMat(0),
+   WorldMaterial(0),  solidWorld(0),      logicWorld(0),      physiWorld(0),
+   fSolidRadSlice(0), fLogicRadSlice(0),  fPhysicRadSlice(0),
+   solidRadiator(0),  logicRadiator(0),   physiRadiator(0),
+   fRadiatorMat(0),
+   solidAbsorber(0),  logicAbsorber(0),   physiAbsorber(0),
+   magField(0),       calorimeterSD(0),   fXTRModel(0)
 {
   // default parameter values of the calorimeter
-
-  G4double inch = 2.54*cm ;
-  G4double  mil = inch/1000.0 ;
 
   WorldSizeZ = 80.*cm;
   WorldSizeR = 20.*cm;
 
   // Radiator and detector parameters
 
-  fRadThickness = 40.0*micrometer ; // 25*micrometer ;     
+  fRadThickness = 40.0*micrometer ;   // 25*micrometer ;     
   fGasGap       = 0.126*mm ;          //  1500*micrometer  ;   
-  fFoilNumber   = 300 ;             //  188 ;
+  fFoilNumber   = 300 ;               //  188 ;
 
-  AbsorberThickness = 3.0*cm ;   // 40.0*mm ;
+  AbsorberThickness = 3.0*cm ;        // 40.0*mm ;
 
   AbsorberRadius   = 10.*cm;
   zAbsorber = 36.*cm ;
 
-  fWindowThick = 51.0*micrometer ;
+  fWindowThick    = 51.0*micrometer ;
   fElectrodeThick = 10.0*micrometer ;
-  fGapThick = 1.0*mm ;
+  fGapThick       =  1.0*mm ;
 
 
-  fDetThickness = 40.0*mm ;
+  fDetThickness =  40.0*mm ;
   fDetLength    = 200.0*cm  ;
-  fDetGap       = 1.0*mm ;
+  fDetGap       =   1.0*mm ;
 
-  fStartR       = 40*cm  ;
+  fStartR       = 40.0*cm  ;
   fStartZ       = 50.0*mm  ;
 
   fModuleNumber = 1      ;  
@@ -133,127 +131,130 @@ G4VPhysicalVolume* Em10DetectorConstruction::Construct()
 
 void Em10DetectorConstruction::DefineMaterials()
 { 
- //This function illustrates the possible ways to define materials
- 
-G4String name, symbol ;             //a=mass of a mole;
-G4double a, z, density ;            //z=mean number of protons;  
-G4int iz, n, nel ;                       //iz=number of protons  in an isotope; 
-                                   // n=number of nucleons in an isotope;
-
-G4int ncomponents, natoms;
-G4double abundance, fractionmass;
-G4double temperature, pressure;
-
-//
-// define Elements
-//
-
+  //This function illustrates the possible ways to define materials
+  
+  G4String name, symbol ;             //a =mass of a mole;
+  G4double a, z, density ;            //z =mean number of protons;  
+  //G4int iz, n, nel ;                //iz=number of protons  in an isotope; 
+                                      //n =number of nucleons in an isotope;
+  G4int nel ; 
+  
+  //G4int ncomponents, natoms;
+  G4int  ncomponents;
+  //G4double abundance, fractionmass;
+  G4double fractionmass;
+  //G4double temperature, pressure;
+  
+  //
+  // define Elements
+  //
+  
   a = 1.01*g/mole;
   G4Element* elH  = new G4Element(name="Hydrogen",symbol="H" , z= 1., a);
-
+  
   a = 6.94*g/mole;
   G4Element* elLi  = new G4Element(name="Lithium",symbol="Li" , z= 3., a);
-
+  
   a = 9.01*g/mole;
   G4Element* elBe  = new G4Element(name="Berillium",symbol="Be" , z= 4., a);
-
+  
   a = 6.01*g/mole;
   G4Element* elC = new G4Element(name="Carbon", symbol="C", z=6., a);
-
+  
   a = 14.01*g/mole;
   G4Element* elN  = new G4Element(name="Nitrogen",symbol="N" , z= 7., a);
-
+  
   a = 16.00*g/mole;
   G4Element* elO  = new G4Element(name="Oxygen"  ,symbol="O" , z= 8., a);
-
+  
   a = 39.948*g/mole;
   G4Element* elAr = new G4Element(name="Argon", symbol="Ar", z=18., a);
-
+  
   a = 131.29*g/mole;
   G4Element* elXe = new G4Element(name="Xenon", symbol="Xe", z=54., a);
   
   a = 19.00*g/mole;
   G4Element* elF  = new G4Element(name="Fluorine", symbol="F", z=9., a);
-
-/////////////////////////////////////////////////////////////////
-//
-// Detector windows, electrodes 
+  
+  /////////////////////////////////////////////////////////////////
+  //
+  // Detector windows, electrodes 
   // Al for electrodes
-
+  
   density = 2.700*g/cm3;
   a = 26.98*g/mole;
   G4Material* Al = new G4Material(name="Aluminium", z=13., a, density);
-
-
-////////////////////////////////////////////////////////////////////////////
-//
-// Materials for popular X-ray TR radiators
-//
-
+  
+  
+  ////////////////////////////////////////////////////////////////////////////
+  //
+  // Materials for popular X-ray TR radiators
+  //
+  
   // TRT_CH2
-      
+  
   density = 0.935*g/cm3;
   G4Material* TRT_CH2 = new G4Material(name="TRT_CH2",density, nel=2);
   TRT_CH2->AddElement(elC,1);
   TRT_CH2->AddElement(elH,2);
-
+  
   // Radiator
-
+  
   density = 0.059*g/cm3;
   G4Material* Radiator = new G4Material(name="Radiator",density, nel=2);
   Radiator->AddElement(elC,1);
   Radiator->AddElement(elH,2);
-
+  
   // Carbon Fiber
-
+  
   density = 0.145*g/cm3;
   G4Material* CarbonFiber = new G4Material(name="CarbonFiber",density, nel=1);
   CarbonFiber->AddElement(elC,1);
-
+  
   // Lithium
-
+  
   density = 0.534*g/cm3;
   G4Material* Li = new G4Material(name="Li",density, nel=1);
   Li->AddElement(elLi,1);
-
+  
   // Beryllium
-
+  
   density = 1.848*g/cm3;
   G4Material* Be = new G4Material(name="Be",density, nel=1);
   Be->AddElement(elBe,1);
-
+  
   // Mylar
-
+  
   density = 1.39*g/cm3;
   G4Material* Mylar = new G4Material(name="Mylar", density, nel=3);
   Mylar->AddElement(elO,2);
   Mylar->AddElement(elC,5);
   Mylar->AddElement(elH,4);
-
+  
   // Kapton (polyimide) ??? since = Mylar C5H4O2
-
+  
   density = 1.39*g/cm3;
   G4Material* Kapton = new G4Material(name="Kapton", density, nel=3);
   Kapton->AddElement(elO,2);
   Kapton->AddElement(elC,5);
   Kapton->AddElement(elH,4);
-
+  
   // Polypropelene
-
+  
   G4Material* CH2 = new G4Material ("Polypropelene" , 0.91*g/cm3, 2);
   CH2->AddElement(elH,2);
   CH2->AddElement(elC,1);
-
-//////////////////////////////////////////////////////////////////////////
-//
-// Noble gases , STP conditions
-
+  
+  //////////////////////////////////////////////////////////////////////////
+  //
+  // Noble gases , STP conditions
+  
   // Helium as detector gas, STP
-
+  
   density = 0.178*mg/cm3 ;
   a = 4.0026*g/mole ;
   G4Material* He  = new G4Material(name="He",z=2., a, density );
-
+  
   // Neon as detector gas, STP
 
   density = 0.900*mg/cm3 ;
@@ -278,37 +279,37 @@ G4double temperature, pressure;
   a = 131.29*g/mole ;
   G4Material* Xe  = new G4Material(name="Xenon",z=54., a, density );
 
-/////////////////////////////////////////////////////////////////////////////
-//
-// Hydrocarbones, metane and others
-
+  /////////////////////////////////////////////////////////////////////////////
+  //
+  // Hydrocarbones, metane and others
+  
   // Metane, STP
-
+  
   density = 0.7174*mg/cm3 ;
   G4Material* metane = new G4Material(name="CH4",density,nel=2) ;
   metane->AddElement(elC,1) ;
   metane->AddElement(elH,4) ;
-
+  
   // Propane, STP
-
+  
   density = 2.005*mg/cm3 ;
   G4Material* propane = new G4Material(name="C3H8",density,nel=2) ;
   propane->AddElement(elC,3) ;
   propane->AddElement(elH,8) ;
-
+  
   // iso-Butane (methylpropane), STP
-
+  
   density = 2.67*mg/cm3 ;
   G4Material* isobutane = new G4Material(name="isoC4H10",density,nel=2) ;
   isobutane->AddElement(elC,4) ;
   isobutane->AddElement(elH,10) ;
-
-///////////////////////////////////////////////////////////////////////////
-//
-// Molecular gases
-
+  
+  ///////////////////////////////////////////////////////////////////////////
+  //
+  // Molecular gases
+  
   // Carbon dioxide
-
+  
   density = 1.977*mg/cm3;
   G4Material* CO2 = new G4Material(name="CO2", density, nel=2,
 				       kStateGas,273.15*kelvin,1.*atmosphere);
@@ -361,84 +362,86 @@ G4double temperature, pressure;
   Air->AddMaterial( Nitrogen, fractionmass = 0.7557 ) ;
   Air->AddMaterial( Oxygen,   fractionmass = 0.2315 ) ;
   Air->AddMaterial( Argon,    fractionmass = 0.0128 ) ;
-
-////////////////////////////////////////////////////////////////////////////
-//
-// MWPC mixtures
-
+  
+  ////////////////////////////////////////////////////////////////////////////
+  //
+  // MWPC mixtures
+  
   // 80% Xe + 20% CO2, STP
-
+  
   density = 5.0818*mg/cm3 ;      
   G4Material* Xe20CO2 = new G4Material(name="Xe20CO2"  , density, ncomponents=2);
   Xe20CO2->AddMaterial( Xe,              fractionmass = 0.922 ) ;
   Xe20CO2->AddMaterial( CarbonDioxide,   fractionmass = 0.078 ) ;
-
+  
   // 80% Kr + 20% CO2, STP
-
+  
   density = 3.601*mg/cm3 ;      
   G4Material* Kr20CO2 = new G4Material(name="Kr20CO2", density, 
-                                                       ncomponents=2);
+				       ncomponents=2);
   Kr20CO2->AddMaterial( Kr,              fractionmass = 0.89 ) ;
   Kr20CO2->AddMaterial( CarbonDioxide,   fractionmass = 0.11 ) ;
-
+  
   // Xe + 55% He + 15% CH4 ; NIM A294 (1990) 465-472; STP
-
+  
   density = 1.963*mg/cm3;
   G4Material* Xe55He15CH4 = new G4Material(name="Xe55He15CH4",density,
-					                      ncomponents=3);
+					   ncomponents=3);
   Xe55He15CH4->AddMaterial(Xe, 0.895);
   Xe55He15CH4->AddMaterial(He, 0.050);
   Xe55He15CH4->AddMaterial(metane,0.055);
-
+  
   // 90% Xe + 10% CH4, STP ; NIM A248 (1986) 379-388
-
+  
   density = 5.344*mg/cm3 ;      
   G4Material* Xe10CH4 = new G4Material(name="Xe10CH4"  , density, 
-                                                  ncomponents=2);
+				       ncomponents=2);
   Xe10CH4->AddMaterial( Xe,       fractionmass = 0.987 ) ;
   Xe10CH4->AddMaterial( metane,   fractionmass = 0.013 ) ;
-
+  
   // 95% Xe + 5% CH4, STP ; NIM A214 (1983) 261-268
-
+  
   density = 5.601*mg/cm3 ;      
   G4Material* Xe5CH4 = new G4Material(name="Xe5CH4"  , density, 
-                                                  ncomponents=2);
+				      ncomponents=2);
   Xe5CH4->AddMaterial( Xe,       fractionmass = 0.994 ) ;
   Xe5CH4->AddMaterial( metane,   fractionmass = 0.006 ) ;
-
+  
   // 80% Xe + 20% CH4, STP ; NIM A253 (1987) 235-244
-
+  
   density = 4.83*mg/cm3 ;      
   G4Material* Xe20CH4 = new G4Material(name="Xe20CH4"  , density, 
-                                                  ncomponents=2);
+				       ncomponents=2);
   Xe20CH4->AddMaterial( Xe,       fractionmass = 0.97 ) ;
   Xe20CH4->AddMaterial( metane,   fractionmass = 0.03 ) ;
-
-
+  
+  
   G4cout << *(G4Material::GetMaterialTable()) << G4endl;
-
+  
   // default materials of the calorimeter and TR radiator
-
+  
   fRadiatorMat =  Li ; // CH2 Mylar ; 
   
   fWindowMat = Mylar ;
   fElectrodeMat = Al ;
-
+  
   AbsorberMaterial = Xe10CH4 ; 
   fGapMat          = Xe10CH4 ;
-
+  
   WorldMaterial    = He ;
 }
 
 /////////////////////////////////////////////////////////////////////////
 //
 //
-  
+
 G4VPhysicalVolume* Em10DetectorConstruction::ConstructCalorimeter()
 {
-  G4int i, j ; 
-  G4double zModule, zRadiator, rModule, rRadiator ; 
-
+  //  G4int i, j ; 
+  G4int j ;
+  //  G4double zModule, zRadiator, rModule, rRadiator ; 
+  G4double zModule, zRadiator ;
+  
   // complete the Calor parameters definition and Print 
 
   ComputeCalorParameters();
@@ -461,7 +464,7 @@ G4VPhysicalVolume* Em10DetectorConstruction::ConstructCalorimeter()
   				 G4ThreeVector(),	//at (0,0,0)
                                  "World",		//its name
                                  logicWorld,		//its logical volume
-                                 NULL,			//its mother  volume
+                                 0,			//its mother  volume
                                  false,			//no boolean operation
                                  0);			//copy number
 
@@ -660,7 +663,7 @@ void Em10DetectorConstruction::ParametrisationModel()
     fXTRModel = new G4RegularXTRdEdx(logicRadiator,fRadThickness,fGasGap);
     break;
   default:
-    fXTRModel = NULL;
+    fXTRModel = 0;
     G4cout<<"Warning: No parametrisation model was defined?"<<G4endl ;
     break ;
   }
@@ -698,9 +701,9 @@ void Em10DetectorConstruction::SetAbsorberMaterial(G4String materialChoice)
   // search the material by its name   
   G4Material* pttoMaterial;
 
-  for (G4int J=0 ; J<theMaterialTable->length() ; J++)
+  for (size_t J=0 ; J<theMaterialTable->size() ; J++)
   { 
-    pttoMaterial = (*theMaterialTable)(J); 
+    pttoMaterial = (*theMaterialTable)[J]; 
     
     if(pttoMaterial->GetName() == materialChoice)
     {
@@ -723,9 +726,9 @@ void Em10DetectorConstruction::SetRadiatorMaterial(G4String materialChoice)
   // search the material by its name
    
   G4Material* pttoMaterial;
-  for (G4int J=0 ; J<theMaterialTable->length() ; J++)
+  for (size_t J=0 ; J<theMaterialTable->size() ; J++)
   { 
-    pttoMaterial = (*theMaterialTable)(J);
+    pttoMaterial = (*theMaterialTable)[J];
      
     if(pttoMaterial->GetName() == materialChoice)
     {
@@ -748,9 +751,9 @@ void Em10DetectorConstruction::SetWorldMaterial(G4String materialChoice)
   // search the material by its name   
   G4Material* pttoMaterial;
 
-  for (G4int J=0 ; J<theMaterialTable->length() ; J++)
+  for (size_t J=0 ; J<theMaterialTable->size() ; J++)
   { 
-    pttoMaterial = (*theMaterialTable)(J);
+    pttoMaterial = (*theMaterialTable)[J];
      
     if(pttoMaterial->GetName() == materialChoice)
     {
@@ -860,7 +863,7 @@ void Em10DetectorConstruction::SetMagField(G4double fieldValue)
   } 
   else 
   {
-    magField = NULL;
+    magField = 0;
     fieldMgr->SetDetectorField(magField);
   }
 
