@@ -1,12 +1,12 @@
-$Id: History,v 1.1 2000-07-14 15:50:28 grichine Exp $
+$Id: History,v 1.2 2001-11-21 11:57:06 mverderi Exp $
 -------------------------------------------------------------------
 
      =========================================================
      Geant4 - an Object-Oriented Toolkit for Simulation in HEP
      =========================================================
 
-                    TestEm8 History file
-                    ------------------------
+                    TestEm10 History file
+                    ---------------------
 This file should be used by the G4 example coordinator to briefly
 summarize all major modifications introduced in the code and keep
 track of all tags.
@@ -14,6 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+21 Nov. 2001 Marc Verderi
+- Taken for the HEAD and made compliant with
+  geant4-04-00-cand-01
+- clear many warnings
+
 
 28th June 2000  John Allison  (TestEm8-V02-00-00)
 - Added TestEm8.out.
